<resources>
    <string name="app_name">Lab2</string>
    <string name="_1">#1</string>
    <string name="_2">#2</string>
    <string name="_3">#3</string>
    <string name="_4">#4</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="yellow">yellow</string>
    <string name="right_50">Right 50%</string>
    <string name="left_50">Left 50%</string>
    <string name="center_left">Center_Left</string>
    <string name="center">Center</string>
    <string name="center_right">Center_right</string>
    <string name="bottom">Bottom</string>
</resources>