<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:onClick="firstBtnClick"
        android:id="@+id/button"
        android:layout_width="70dp"
        android:layout_height="140dp"
        android:text="@string/_1"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:onClick="secondBtnClick"
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="140dp"
        android:text="@string/_2"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:onClick="thirdBtnClick"
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="140dp"
        android:layout_marginStart="3dp"
        android:text="@string/_3"
        app:layout_constraintEnd_toEndOf="@id/button4"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:onClick="fourBtnClick"
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="140dp"
        android:layout_marginStart="3dp"
        android:text="@string/_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>